// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Form Update Item Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/update_item.png",
      }
    }
    style={
      Object {
        "height": 200,
        "marginBottom": 16,
        "marginTop": 24,
        "width": 280,
      }
    }
    testID="TEST_ID_IMAGE_UPDATE_ITEM"
  />
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Note"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_NOTES_ITEM"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0D47A1",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "width": "90%",
      }
    }
    testID="TEST_ID_BUTTON_UPDATE_DETAIL"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
        }
      }
    >
      Update Item
    </Text>
  </View>
</View>
`;

exports[`Testing Login Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/login.png",
      }
    }
    style={
      Object {
        "height": 200,
        "marginBottom": 16,
        "marginTop": 24,
        "width": 280,
      }
    }
    testID="TEST_ID_IMAGE_LOGIN"
  />
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_EMAIL_LOGIN"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_PASSWORD_LOGIN"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#000",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰈉
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0D47A1",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "width": "90%",
      }
    }
    testID="TEST_ID_BUTTON_LOGIN"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
        }
      }
    >
      Login
    </Text>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#E3F2FD",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "width": "90%",
      }
    }
    testID="TEST_ID_CREATE_ACCOUNT"
  >
    <Text
      style={
        Object {
          "color": "#212121",
          "fontSize": 16,
        }
      }
    >
      Create Account
    </Text>
  </View>
</View>
`;

exports[`Testing Register Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "flex": 1,
      "justifyContent": "flex-start",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/register.png",
      }
    }
    style={
      Object {
        "height": 200,
        "marginBottom": 16,
        "marginTop": 24,
        "width": 280,
      }
    }
    testID="TEST_ID_IMAGE_REGISTER"
  />
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      keyboardType="email-address"
      onChangeText={[Function]}
      placeholder="Email"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_EMAIL_REGISTER"
      underlineColorAndroid="transparent"
      value=""
    />
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Password"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_PASSWORD_REGISTER"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#000",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰈉
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#212121",
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "margin": 10,
        "width": "90%",
      }
    }
  >
    <TextInput
      allowFontScaling={true}
      onChangeText={[Function]}
      placeholder="Confirmation Password"
      placeholderTextColor="#000"
      rejectResponderTermination={true}
      secureTextEntry={true}
      style={
        Object {
          "flex": 1,
        }
      }
      testID="TEST_ID_CONFIRMATION_PASSWORD"
      underlineColorAndroid="transparent"
      value=""
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
    >
      <Text
        allowFontScaling={false}
        style={
          Array [
            Object {
              "color": "#000",
              "fontSize": 24,
            },
            undefined,
            Object {
              "fontFamily": "Material Design Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        󰈉
      </Text>
    </View>
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#0D47A1",
        "borderRadius": 16,
        "height": 50,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "width": "90%",
      }
    }
    testID="TEST_ID_BUTTON_REGISTER"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
        }
      }
    >
      Register
    </Text>
  </View>
</View>
`;

exports[`Testing TodoItems Screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 10,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/item.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 120,
            "justifyContent": "center",
            "width": 160,
          }
        }
        testID="TEST_ID_IMAGE_TODOITEM"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Add Todo Item..."
        placeholderTextColor="#FFF"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#0D47A1",
            "borderRadius": 10,
            "color": "#FFF",
            "marginBottom": 10,
            "marginLeft": 16,
            "padding": 10,
            "width": 200,
          }
        }
        testID="TEST_ID_TEXT_INPUT_ITEM"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#0D47A1",
            "borderRadius": 10,
            "justifyContent": "center",
            "marginBottom": 10,
            "marginLeft": 16,
            "opacity": 1,
            "width": 200,
          }
        }
        testID="TEST_ID_BUTTON_SUBMIT_ITEM"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View />
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Testing TodoLists Screen renders correctly 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  style={
    Object {
      "backgroundColor": "#FFF",
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flexDirection": "row",
        "marginTop": 10,
      }
    }
  >
    <View>
      <Image
        source={
          Object {
            "testUri": "../../../src/assets/images/list.png",
          }
        }
        style={
          Object {
            "alignItems": "center",
            "height": 120,
            "justifyContent": "center",
            "width": 160,
          }
        }
        testID="TEST_ID_IMAGE_TODOLIST"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "borderRadius": 10,
          "flexDirection": "column",
          "justifyContent": "center",
        }
      }
    >
      <TextInput
        allowFontScaling={true}
        onChangeText={[Function]}
        placeholder="Add Todo List..."
        placeholderTextColor="#FFF"
        rejectResponderTermination={true}
        style={
          Object {
            "backgroundColor": "#0D47A1",
            "borderRadius": 10,
            "color": "#FFF",
            "marginBottom": 10,
            "marginLeft": 16,
            "padding": 10,
            "width": 200,
          }
        }
        testID="TEST_ID_TEXT_INPUT_LIST"
        underlineColorAndroid="transparent"
        value=""
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#0D47A1",
            "borderRadius": 10,
            "justifyContent": "center",
            "marginBottom": 10,
            "marginLeft": 16,
            "opacity": 1,
            "width": 200,
          }
        }
        testID="TEST_ID_BUTTON_SUBMIT_LIST"
      >
        <Text
          allowFontScaling={false}
          style={
            Array [
              Object {
                "color": "#FFF",
                "fontSize": 30,
              },
              undefined,
              Object {
                "fontFamily": "Material Icons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              Object {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
  <RCTScrollView>
    <View />
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Testing User Screen renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/images/profil.png",
      }
    }
    style={
      Object {
        "height": 200,
        "marginBottom": 30,
        "marginTop": 30,
        "width": 240,
      }
    }
    testID="TEST_ID_IMAGE_USER"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#B71C1C",
        "borderRadius": 25,
        "color": "#000",
        "height": 50,
        "justifyContent": "center",
        "marginTop": 20,
        "opacity": 1,
        "width": "80%",
      }
    }
    testID="TEST_ID_BUTTON_LOGOUT"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
        }
      }
    >
      Logout
    </Text>
  </View>
</View>
`;
